fix: bug with botman widget box, disabling pointer event behind it

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,3 +10,12 @@
 * {
     scroll-behavior: smooth;
 }
+
+#botmanWidgetRoot > div {
+    pointer-events: none !important;
+}
+
+#botmanWidgetRoot > div > * {
+    pointer-events: auto !important;
+    cursor: pointer !important;
+}
